add njk support for now

--- a/styles/icons/mapping.less
+++ b/styles/icons/mapping.less
@@ -135,6 +135,9 @@
 .icon-set('.stache', 'mustache', @orange);
 
 // NPM
+.icon-set('.njk', 'nunjucks', @green);
+
+// NPM
 .icon-set('.npm-debug.log', 'npm', @ignore);
 .icon-set('.npmignore', 'npm', @red);
 
